--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -251,3 +251,24 @@ div.required .control-label:not(span):before, td.required:before {
 .flex-control-paging {
   display: none;
 }
+
+.pagination > li > a, .pagination > li > span {
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    margin-left: -1px;
+    line-height: 1.42857143;
+    color: #27C3ED;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+
+.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
+    z-index: 2;
+    color: #fff;
+    cursor: default;
+    background-color: #27C3ED;
+    border-color: #27C3ED;
+}
