--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -148,6 +148,7 @@ footer {
   bottom: 0;
   position: fixed;
   width: 100%;
+  z-index: 100;
   /*font-size: 12px;*/
   /*border-bottom: 3px solid #0F97B7;*/
 }
