change style spin to faster and fiexed account_left error none opject

--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -456,3 +456,8 @@ div.required .control-label:not(span):before, td.required:before {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.fast-spin {
+  -webkit-animation: fa-spin 0.5s infinite linear;
+  animation: fa-spin 0.5s infinite linear;
+}
