--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -86,6 +86,30 @@ body {
   /*color: #000;*/
 }
 
+/* water mark */
+.watermark-userpic .watermark-pic {
+  position: relative;
+  display: inline-block;
+}
+
+.watermark-userpic .watermark-pic:hover .edit, .watermark-userpic .watermark-pic:focus .edit {
+  display: block;
+}
+
+.watermark-userpic .edit {
+  padding-top: 0px; 
+  padding-right: 0px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: none;
+}
+
+.watermark-userpic .edit a {
+  /*color: #000;*/
+}
+/* end */
+
 .profile-usertitle {
   text-align: center;
   margin-top: 20px;
