--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -516,3 +516,15 @@ h4.panel-title:hover {
 .modal-content {
   background: #fbfcfc;
 }
+
+ul.filter-left-display-menu {
+  margin: 0px;
+  padding: 0px;
+}
+
+ul.filter-left-display-menu li {
+  margin: 0px;
+  padding: 0px;
+  display: inline-block;
+  font-size: 16px;
+}
