--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -553,25 +553,48 @@ ul.filter-left-display-menu li {
   position: absolute;
   bottom: 0;
   left: 0;
+  height: 15%;
+  width: 100%;
+  opacity: 0.7;
+  transition: .5s ease;
+  /*background-color: #F1F3FA;*/
+}
+
+.image-container .overlaylogo {
+  position: absolute;
+  top: 0;
+  padding: 5px;
   height: 100%;
-  width: 30%;
+  width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #F1F3FA;
+  /*background-color: #F1F3FA;*/
 }
 
 .image-container:hover .overlay {
-  opacity: 1;
+  opacity: 0;
+  background-color: #F1F3FA;
+}
+
+.image-container:hover .overlaylogo{
+  opacity: 0.9;
+  background-color: #F1F3FA;
 }
 
 .image-container .overlay .text {
-  color: white;
-  font-size: 20px;
+  /*color: #ccc;*/
+  font-size: 12px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+}
+
+.image-container .overlaylogo .text {
+  /*color: #ccc;*/
+  font-size: 10px;
+  color: #ccc;
 }
 
 .image-sub {
@@ -592,4 +615,44 @@ ul.filter-left-display-menu li {
   .image-sub-more {
     width:10%;
   }
+}
+
+.display-image {
+  /*height: 180px;*/
+  margin-bottom: 5px;
+  margin-right: 5px;
+  /*display: inline-block;*/
+  float: left;
+  overflow: hidden;
+}
+
+.display-image:hover {
+  cursor: pointer;
+  border: 1px solid #6e8984;
+}
+
+#imaginary_container{
+  /*margin-top:20%; */
+  /* Don't copy this */
+}
+.stylish-input-group .input-group-addon{
+    background: white !important; 
+}
+.stylish-input-group .form-control{
+  border-right:0; 
+  box-shadow:0 0 0; 
+  border-color:#ccc;
+}
+.stylish-input-group button{
+    border:0;
+    background:transparent;
+}
+
+.bootstrap-tagsinput {
+    width: 100%;
+}
+
+.container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header {
+  margin-right: -15px;
+  margin-left: -15px;
 }
