--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -656,3 +656,30 @@ ul.filter-left-display-menu li {
   margin-right: -15px;
   margin-left: -15px;
 }
+
+.message-list {
+  border-top: 1px dotted #91beb1;
+  padding: 20px 0px;
+  cursor: pointer;
+}
+
+.message-list-active {
+  border-top: 1px dotted #91beb1;
+  padding: 20px;
+  background: #F1F3FA;
+  cursor: pointer;
+}
+
+.message-subject {
+  padding-left: 50px;
+  font-weight: bold;
+}
+
+.message-preview {
+  padding-left: 50px;
+}
+
+.message-list:hover, .message-list-active:hover {
+  opacity: 0.8;
+  padding: 20px;
+}
