--- a/blog/public/css/app.css
+++ b/blog/public/css/app.css
@@ -233,7 +233,7 @@ footer {
 
 .navbar-default {
   background: #fbfcfc;
-  border-color: #e2e5d8;
+  border-color: #91beb1;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -587,7 +587,7 @@ ul.filter-left-display-menu li {
 }
 
 .image-container:hover .overlaylogo{
-  opacity: 0.9;
+  opacity: 0.7;
   background-color: #F1F3FA;
 }
 
@@ -771,3 +771,34 @@ ul.filter-left-display-menu li {
   margin-top:5px; 
   margin-bottom: 5px;
 }
+
+/* for auto items */
+.row_grid_large {
+  /* column width */
+  -moz-column-width: 19em;
+  -webkit-column-width: 19em;
+  
+  /* space between columns */
+  -moz-column-gap: 1em;
+  -webkit-column-gap: 1em;
+}
+
+.item_grid_large {
+  display: inline-block;
+  width: 100%;
+}
+.well {
+    min-height: 20px;
+    padding: 5px;
+    margin-bottom: 20px;
+    /*background-color: #f5f5f5;*/
+    background-color: #fbfcfc;
+    border: 1px solid #91beb1;
+    border-radius: 4px;
+    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);*/
+    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.05);*/
+}
+.well-title, .well-description {
+  font-size: 12px;
+}
+/* end */
