--- a/blog/public/css/app_exhibition.css
+++ b/blog/public/css/app_exhibition.css
@@ -1,323 +1,106 @@
-<style type="text/css">
-input[type="text"],
-input[type="email"],
-input[type="date"],
-select.form-control {
-    height: 50px;
-    margin: 0;
-    padding: 0 20px;
-    vertical-align: middle;
-    background: #f8f8f8;
-    border: 3px solid #ddd;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 50px;
-    color: #888;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -o-transition: all .3s;
-    -moz-transition: all .3s;
-    -webkit-transition: all .3s;
-    -ms-transition: all .3s;
-    transition: all .3s;
-}
-
-input[type="file"] {
-    height: 35px;
-    margin: 0;
-    padding: 0 20px;
-    vertical-align: bottom;
-    background: #f8f8f8;
-    border: 3px solid #ddd;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 30px;
-    color: #888;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -o-transition: all .3s;
-    -moz-transition: all .3s;
-    -webkit-transition: all .3s;
-    -ms-transition: all .3s;
-    transition: all .3s;
-}
-
-input[type=radio] {
-    margin-top: 8px !important;
-}
-
-textarea,
-textarea.form-control {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    line-height: 30px;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus,
-textarea:focus,
-textarea.form-control:focus {
-    outline: 0;
-    background: #fff;
-    border: 3px solid #ccc;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-input[type="text"]:-moz-placeholder,
-input[type="password"]:-moz-placeholder,
-textarea:-moz-placeholder,
-textarea.form-control:-moz-placeholder {
-    color: #888;
-}
-
-input[type="text"]:-ms-input-placeholder,
-input[type="password"]:-ms-input-placeholder,
-textarea:-ms-input-placeholder,
-textarea.form-control:-ms-input-placeholder {
-    color: #888;
-}
-
-input[type="text"]::-webkit-input-placeholder,
-input[type="password"]::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder,
-textarea.form-control::-webkit-input-placeholder {
-    color: #888;
-}
-
-button.btn {
-    height: 50px;
-    margin: 0;
-    padding: 0 20px;
-    vertical-align: middle;
-    background: #26A69A;
-    ;
-    border: 0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 50px;
-    color: #fff;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    text-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -o-transition: all .3s;
-    -moz-transition: all .3s;
-    -webkit-transition: all .3s;
-    -ms-transition: all .3s;
-    transition: all .3s;
-}
-
-button.btn:hover {
-    opacity: 0.6;
-    color: #fff;
-}
-
-button.btn:active {
-    outline: 0;
-    opacity: 0.6;
-    color: #fff;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-button.btn:focus {
-    outline: 0;
-    opacity: 0.6;
-    background: #26A69A;
-    ;
-    color: #fff;
-}
-
-button.btn:active:focus,
-button.btn.active:focus {
-    outline: 0;
-    opacity: 0.6;
-    background: #26A69A;
-    ;
-    color: #fff;
-}
-
-
 /*style.css**/
-
 body {
     font-family: 'Raleway';
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 300;
-    color: #888;
+    color: #616161;
     line-height: 30px;
     /*text-align: center;*/
     background-color: #f1f1f1;
+}
+
+#block-loader {
+  /*position: absolute;*/
+  z-index: 1000000;
+  width: 100%;
+  height: 100%;
+  background: #010100;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  background-color: rgba(0,0,0,0.2);
+}
+.myloader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid teal;
+  width: 100px;
+  height: 100px;
+  margin: 15% auto;
+  opacity: 10;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+button.btn {
+    background: teal;
+    border: 1px solid teal;
+}
+
+button.btn:hover {
+    background: teal;
+    border: 1px solid teal;
+    opacity: 0.8;
 }
 
 strong {
     font-weight: 500;
 }
 
-a,
-a:hover,
-a:focus {
-    color: #26A69A;
-    ;
+a {
+    color: teal;
     text-decoration: none;
-    -o-transition: all .3s;
-    -moz-transition: all .3s;
-    -webkit-transition: all .3s;
-    -ms-transition: all .3s;
-    transition: all .3s;
 }
 
-h1,
-h2 {
-    margin-top: 10px;
-    font-size: 38px;
-    font-weight: 100;
-    color: #555;
-    line-height: 50px;
-}
-
-h3 {
-    font-size: 22px;
-    font-weight: 300;
-    color: #555;
-    line-height: 30px;
-}
-
-::-moz-selection {
-    background: #26A69A;
-    ;
-    color: #fff;
-    text-shadow: none;
-}
-
-::selection {
-    background: #26A69A;
-    ;
-    color: #fff;
-    text-shadow: none;
-}
-
-.btn-link-1 {
-    display: inline-block;
-    height: 50px;
-    margin: 0 5px;
-    padding: 16px 20px 0 20px;
-    background: #26A69A;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-}
-
-.btn-link-1:hover,
-.btn-link-1:focus,
-.btn-link-1:active {
-    outline: 0;
-    opacity: 0.6;
-    color: #fff;
-}
-
-.btn-link-2 {
-    display: inline-block;
-    height: 50px;
-    margin: 0 5px;
-    padding: 15px 20px 0 20px;
-    background: rgba(0, 0, 0, 0.3);
-    border: 1px solid #fff;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-}
-
-.btn-link-2:hover,
-.btn-link-2:focus,
-.btn-link-2:active,
-.btn-link-2:active:focus {
-    outline: 0;
-    opacity: 0.6;
-    background: rgba(0, 0, 0, 0.3);
-    color: #fff;
-}
-
-
-/***** Top content *****/
-
-.form-box {
-    padding-top: 40px;
-    font-family: 'Roboto', sans-serif !important;
-}
-
-.form-top {
-    overflow: hidden;
-    padding: 0 25px 15px 25px;
-    background: #26A69A;
-    -moz-border-radius: 4px 4px 0 0;
-    -webkit-border-radius: 4px 4px 0 0;
-    border-radius: 4px 4px 0 0;
-    text-align: left;
-    color: #fff;
-    transition: opacity .3s ease-in-out;
-}
-
-.form-top h3 {
-    color: #fff;
-}
-
-.form-bottom {
-    padding: 25px 25px 30px 25px;
-    background: #eee;
-    -moz-border-radius: 0 0 4px 4px;
-    -webkit-border-radius: 0 0 4px 4px;
-    border-radius: 0 0 4px 4px;
-    text-align: left;
-    transition: all .4s ease-in-out;
-}
-
-.form-bottom:hover {
-    -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-
-form .form-bottom button.btn {
-    min-width: 105px;
-}
-
-form .form-bottom .input-error {
-    border-color: #d03e3e;
-    color: #d03e3e;
-}
-
-form.registration-form fieldset {
-    display: none;
+a:hover {
+    color: teal;
+    text-decoration: none;
+    opacity: 0.8;
 }
 
 #blank {
     height:50px;
 }
+
+.navbar-default .navbar-brand {
+    color: #ffffff;
+}
+.navbar-default .navbar-brand:hover {
+  opacity: 0.7;
+  color: #ffffff;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #ffffff;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  opacity: 0.7;
+  color: #ffffff;
+}
+
+.dropdown-menu>li>a {
+    color: teal;
+}
+
+.dropdown-menu>li>a:hover {
+  opacity: 0.7;
+  color: teal;
+}
+
 @media (max-width:992px){
     #blank {
         height:50px;
@@ -326,4 +109,155 @@ form.registration-form fieldset {
         margin-top: -2px;
     }
 }
-</style>
+
+@media (max-width:768px){
+  .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-color: #fff;
+    background: #fff;
+  }
+  .navbar-default .navbar-nav>li>a {
+    color: teal;
+  }
+  .navbar-default .navbar-nav>li>a:hover {
+    opacity: 0.7;
+    color: teal;
+  }
+  .dropdown-menu>li>a:hover {
+    opacity: 0.7;
+    color: teal;
+  }
+}
+
+p {
+    margin: 0 0 1em;
+}
+
+.comment {
+    overflow: hidden;
+    padding: 0 0 1em;
+    border-bottom: 1px solid #ddd;
+    margin: 0 0 1em;
+    *zoom: 1;
+}
+
+.comment-img {
+    float: left;
+    margin-right: 33px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.comment-img img {
+    display: block;
+}
+
+.comment-body {
+    overflow: hidden;
+}
+
+.comment .text {
+    padding: 10px;
+    border: 1px solid #e5e5e5;
+    border-radius: 5px;
+    background: #fff;
+}
+
+.comment .text p:last-child {
+    margin: 0;
+}
+
+.comment .attribution {
+    margin: 0.5em 0 0;
+    font-size: 14px;
+    color: #666;
+}
+
+/* Decoration */
+
+.comments,
+.comment {
+    position: relative;
+}
+
+.comments:before,
+.comment:before,
+.comment .text:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 65px;
+}
+
+.comments:before {
+    width: 3px;
+    top: -20px;
+    bottom: -20px;
+    background: rgba(0,0,0,0.1);
+}
+
+.comment:before {
+    width: 9px;
+    height: 9px;
+    border: 3px solid #fff;
+    border-radius: 100px;
+    margin: 16px 0 0 -6px;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
+    background: #ccc;
+}
+
+.comment:hover:before {
+    background: orange;
+}
+
+.comment .text:before {
+    top: 18px;
+    left: 78px;
+    width: 9px;
+    height: 9px;
+    border-width: 0 0 1px 1px;
+    border-style: solid;
+    border-color: #e5e5e5;
+    background: #fff;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+}​
+
+.input-alert {
+    color: #a94442;
+}
+
+/* for auto items */
+.row_grid_large {
+  /* column width */
+  -moz-column-width: 19em;
+  -webkit-column-width: 19em;
+  
+  /* space between columns */
+  -moz-column-gap: 1em;
+  -webkit-column-gap: 1em;
+}
+
+.item_grid_large {
+  display: inline-block;
+  width: 100%;
+}
+.well {
+    min-height: 20px;
+    padding: 5px;
+    margin-bottom: 20px;
+    /*background-color: #f5f5f5;*/
+    background-color: #fbfcfc;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);*/
+    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.05);*/
+}
+.well-title, .well-description {
+  font-size: 12px;
+}
+/* end */
+.highcharts-button {
+  display: none;
+}
